--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,32 +1,33 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing Script&family=Source+Code+Pro");
 body {
-    margin: 0;
-    background: #020202;
-    cursor: crosshair;
-    box-sizing: border-box;
-  }
-  canvas{
-    display:block;
-    width: 100%;
-    height: 100%;
-  }
-  h1 {
-    width: 90%;
-    position: absolute;
-    top: 40%;
-    padding: 20px;
-    text-align: center;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    font-family: "Arial";
-    font-size: 2.5em;
-    font-weight: 700;
-    -webkit-user-select: none;
-    user-select: none;
-  }
-  .tagredElement{
-    position: absolute !important;
-    top: 40% !important;
-    left: 20% !important;
-
-  }
+  margin: 0;
+  background: #020202;
+  cursor: crosshair;
+  box-sizing: border-box;
+}
+canvas {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+h1 {
+  width: 90%;
+  position: absolute;
+  top: 40%;
+  padding: 20px;
+  text-align: center;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-family: "Dancing Script";
+  font-size: 3.3em;
+  line-height: 80px;
+  font-weight: 700;
+  -webkit-user-select: none;
+  user-select: none;
+}
+.tagredElement {
+  position: absolute !important;
+  top: 40% !important;
+  left: 20% !important;
+}
